# Interpretable-ML

./: .gitignore  README.md  pyproject.toml
notebooks/: 1_Intepretability_and_explainability.ipynb  2_decision_regions.ipynb  3_white_box_models.ipynb  4_global_model_agnostic_interpretation.ipynb
