[tool.poetry]
name = "\"interpretable machine learning with python\""
version = "0.1.0"
description = "Code from the book \"Interpretable Machine Learning with Python\" by Serg Masis"
authors = ["Jedrek00 <jedrek.koscielniak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
ipywidgets = "^8.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
