[tool.poetry]
name = "\"interpretable machine learning with python\""
version = "0.1.0"
description = "Code from the book \"Interpretable Machine Learning with Python\" by Serg Masis"
authors = ["Jedrek00 <jedrek.koscielniak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
ipywidgets = "^8.1.2"
statsmodels = "^0.14.1"
machine-learning-datasets = "^0.1.23"
mlxtend = "^0.23.1"
rulefit = "^0.3.1"
interpret = "^0.5.1"
catboost = "^1.2.2"
lime = "^0.2.0.1"
shap = "^0.44.1"
pdpbox = "^0.3.0"
pyale = "^1.1.3"
nbformat = "^5.9.2"
lightgbm = "^4.3.0"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
